# Nulstar-v0

./: .gitignore  .qmake.conf  AppVersion.h.cmake  CMakeLists.txt  LICENSE  Makefile  Nulstar.pro  README.md  common.pri
Accessory/Windows/: Readme.txt  start.bat
Connector/: Connector.cpp  Connector.h  Connector.pro  Module.ncf  NConnectionController.cpp  NConnectionController.h  NConnectionServer.cpp  NConnectionServer.h
Documents/: About Nulstar.odt  Nulstar - Documentation - Message Protocol.docx  Nulstar - Documentation - Module Specification.docx
Documents/Diagram/: Message inheritance.puml
Documents/Protocol/: Message Protocol.md
Documents/Test Reports/: Test Report-20190716-Ray(CCC).docx  Test Report-20190729-Ray(CCC).docx  Test Report-20190807-Ray(CCC).docx
Libraries/: CMakeLists.txt  Libraries.pro
Libraries/Core/: Core.pro  NApiBuilder.cpp  NApiBuilder.h  NCoreService.cpp  NCoreService.h  NPacketProcessor.cpp  NRequest.cpp  NRequest.h  NResponse.cpp  NResponse.h
Libraries/NCore/: NApiBuilder.h  NCore.pro  NCoreService.cpp  NCoreService.h  NMessageProcessor.cpp  NMessageProcessor.h  NPacketProcessor.h
Libraries/NNetwork/: NAck.h  NMessage.cpp  NMessage.h  NMessageAck.cpp  NMessageAck.h  NMessageNegotiateConnection.h  NMessageNegotiateConnectionResponse.cpp  NMessageNegotiateConnectionResponse.h  NMessageRegisterCompoundMethod.cpp  NMessageRegisterCompoundMethod.h  NMessageRequest.h  NMessageResponse.cpp  NMessageUnregisterCompoundMethod.cpp  NNetwork.pro  NNotification.cpp  NNotification.h  NRegisterCompoundMethod.cpp  NRegisterCompoundMethod.h  NRequest.cpp  NRequest.h  NResponse.cpp  NResponse.h  NUnregisterCompoundMethod.h  NUnsubscribe.cpp  NUnsubscribe.h  NWebSocket.cpp  NWebSocket.h  NWebSocketServer.cpp  NWebSocketServer.h
Libraries/Network/: NCoreService.cpp  NCoreService.h  NNulstarWebSocketsServer.cpp  NNulstarWebSocketsServer.h  NRequest.cpp  NRequest.h  NResponse.h  NWebSocketServer.cpp  NWebSocketServer.h  NWebSocketsServer.cpp  NWebSocketsServer.h  Network.h  Network.pro
Libraries/Nulstar/: CMakeLists.txt  Nulstar.pro
Libraries/Nulstar/HttpServer/: HttpServer.pro  qabstracthttpserver.cpp  qabstracthttpserver.h  qabstracthttpserver_p.h  qhttpserver.cpp  qhttpserver.h  qhttpserver_p.h  qhttpserverrequest.cpp  qhttpserverrequest.h  qhttpserverrequest_p.h  qhttpserverresponder.cpp  qhttpserverresponder.h  qhttpserverresponder_p.h  qhttpserverresponse.cpp  qhttpserverresponse.h  qhttpserverresponse_p.h  qhttpserverrouter.cpp  qhttpserverrouter.h  qhttpserverrouter_p.h  qhttpserverrouterrule.cpp  qhttpserverrouterrule.h  qhttpserverrouterrule_p.h
Libraries/Nulstar/NCore/: CMakeLists.txt  Core.h  NApiBuilder.cpp  NApiBuilder.h  NCore.pro  NCoreConstants.h  NCoreService.cpp  NCoreService.h  NModuleAPI.cpp  NModuleAPI.h  NModuleAPIRole.cpp  NModuleAPIRole.h
Libraries/Nulstar/NNetwork/: CMakeLists.txt  NAck.cpp  NAck.h  NDownloader.cpp  NDownloader.h  NMessage.cpp  NMessage.h  NMessageAck.cpp  NMessageAck.h  NMessageFactory.cpp  NMessageFactory.h  NMessageNegotiateConnection.cpp  NMessageNegotiateConnection.h  NMessageNegotiateConnectionResponse.cpp  NMessageNegotiateConnectionResponse.h  NMessageNotification.cpp  NMessageNotification.h  NMessageRegisterCompoundMethod.cpp  NMessageRegisterCompoundMethod.h  NMessageRequest.cpp  NMessageRequest.h  NMessageResponse.cpp  NMessageResponse.h  NMessageUnregisterCompoundMethod.cpp  NMessageUnregisterCompoundMethod.h  NMessageUnsubscribe.cpp  NMessageUnsubscribe.h  NNetwork.pro  NUnregisterCompoundMethod.cpp  NUnregisterCompoundMethod.h  NWebSocket.cpp  NWebSocket.h  NWebSocketServer.cpp  NWebSocketServer.h
Libraries/Nulstar/NNetwork/unittest/: NMessage_unittest.cpp
Libraries/Nulstar/NTools/: NConnectionInfo.cpp  NConnectionInfo.h  NLogger.cpp  NLogger.h  NRunGuard.cpp  NRunGuard.h  NSignalWatcher.cpp  NSignalWatcher.h  NTools.h  NTools.pro  NVersionManifest.cpp  NVersionManifest.h
Modules/: CMakeLists.txt  Modules.pro
Modules/Nulstar/: CMakeLists.txt  Nulstar.pro
Modules/Nulstar/Connector/: AppVersion.h.in  CMakeLists.txt  Connector.cpp  Connector.pro  Module.ncf  NConnectionController.cpp  NConnectionController.h
Modules/Nulstar/NulstarMain/: CMakeLists.txt  Module.ncf  NMainController.cpp  NMainController.h  NModuleInfo.cpp  (+8 more)
Modules/Nulstar/Updater/: CMakeLists.txt  Module.ncf  NUpdateController.cpp  NUpdateController.h  Updater.cpp  Updater.pro  main.cpp
NulstarMain/: AppVersion.h.in  Constants.ncf  Module.ncf  NMainController.cpp  NMainController.h  NModuleInfo.cpp  NModuleInfo.h  NModuleManager.cpp  NModuleManager.h  NModulesManager.cpp  NModulesManager.h  NPluginManger.h  Nulstar.cfg  NulstarMain.cpp  NulstarMain.pro
ServiceManager/: Module.ncf  NServiceManagerController.cpp  NServiceManagerController.h  ServiceManager.cpp  ServiceManager.pro
cmake/: gtest.cmake
(+21 files in other folders)
